<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/dialog_oblate_of"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="52.5"
            android:text="@string/bind_fail"
            android:gravity="center"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0.5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="39"
            android:text="@string/try_again"
            android:textColor="@color/font_blue" />

        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0.5dp" />

        <TextView
            android:text="@string/help"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="39.5"
            android:textColor="@color/font_blue" />

        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0.5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/do_not_bind_now"
            android:textColor="@color/font_blue" />
    </LinearLayout>
</FrameLayout>