<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_model_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tachyon5.kstart.activity.ModelItemActivity"
    tools:showIn="@layout/activity_model_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/activity_model_item_iv_model_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/test" />

        <TextView
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_description" />

        <TextView
            android:layout_marginTop="@dimen/dp_12"
            android:id="@+id/activity_model_item_tv_model_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_types_description" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_types" />

            <TextView
                android:id="@+id/activity_model_item_tv_model_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_state" />

            <TextView
                android:id="@+id/activity_model_item_tv_model_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_model_item_tv_model_collect"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="575"
                android:text="@string/model_start_collect"
                android:background="@drawable/border_black_arc_180"
                android:layout_height="50dp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_model_item_tv_model_build"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="575"
                android:text="@string/create_model"
                android:background="@drawable/border_black_arc_180"
                android:layout_height="50dp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
