<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/dialog_oblate_of"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_weight="45"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/device_not_connnect"
                android:textSize="15sp"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="43"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/dp_8"
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_go_to_connect"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0.5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/font_blue"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_14"
                android:gravity="center"
                android:id="@+id/tv_navigation" />

            <View
                android:layout_width="0.5dp"
                android:background="@color/black"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_positive"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/font_blue"
                android:text="@string/good"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>