<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_new_model"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tachyon5.kstart.activity.AddNewModelActivity"
    tools:showIn="@layout/activity_add_new_model">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/tab_font_color_black"
                android:layout_width="0dp"
                android:layout_weight="195"
                android:text="@string/model_types"
                android:layout_height="wrap_content" />

            <EditText
                android:textSize="@dimen/sp_14"
                android:id="@+id/activity_add_new_model_et_model_types"
                android:background="@drawable/border_gray_arc"
                android:layout_width="0dp"
                android:layout_weight="555"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_weight="195"
                android:text=""
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="555"
                android:layout_height="wrap_content"
                android:text="@string/model_types_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="195"
                android:text="@string/model_name"
                android:layout_height="wrap_content" />

            <EditText
                android:textSize="@dimen/sp_14"
                android:background="@drawable/border_gray_arc"
                android:id="@+id/activity_add_new_model_et_model_name"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_weight="555"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="195"
                android:text="@string/model_description"
                android:layout_height="wrap_content" />

            <EditText
                android:textSize="@dimen/sp_14"
                android:background="@drawable/border_gray_arc"
                android:id="@+id/activity_add_new_model_et_model_description"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="555"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="195"
                android:text="@string/model_picture"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/bg_take_pic"
                android:id="@+id/activity_add_new_model_iv_model_pic"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="555"
                android:layout_width="0dp"
                android:layout_height="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_add_new_model_tv_create_model"
                android:padding="@dimen/dp_12"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="575"
                android:text="@string/create_model"
                android:background="@drawable/border_black_arc_180"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="175"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
