<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tachyon5.kstart.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12.07"
        android:background="@color/white"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="3dp"
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/icon_tab_home_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:text="@string/tab_home"
                android:textColor="@drawable/tab_font_color_select"
                android:id="@+id/textView" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:id="@+id/ll_model"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/icon_tab_model_select"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tab_model"
                android:textSize="@dimen/sp_12"
                android:textColor="@drawable/tab_font_color_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:id="@+id/ll_detection"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_tab_detection_select"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tab_detection"
                android:textSize="@dimen/sp_12"
                android:textColor="@drawable/tab_font_color_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:id="@+id/ll_record"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_tab_record_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:text="@string/tab_record"
                android:textColor="@drawable/tab_font_color_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:id="@+id/ll_set"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_tab_set_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:text="@string/tab_set"
                android:textColor="@drawable/tab_font_color_select" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
